Fixed some db issues and checkbox issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <!-- Latest compiled and minified bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="index.css">
+    <link type="text/css" rel="stylesheet" href="./index.css">
+    <title>Ebay Deal Alert</title>
   </head>
   <body style="text-align:center;">
     <h1 style="margin-top:5%;">Ebay Deal Alert</h1>
