--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -4,7 +4,8 @@
       <meta charset="utf-8">
       <!-- Latest compiled and minified bootstrap CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-      <link type="text/css" rel="stylesheet" href="table.css">
+      <link type="text/css" rel="stylesheet" href="../static/table.css">
+      <title>Search Results</title>
     </head>
       <table class = "table">
         <h1>Search Results</h1>
@@ -27,7 +28,4 @@
         </tr>
         {% endfor %}
       </table>
-
-        
-      <script src="/dist/app.js" type = "text/javascript" src="{{url_for('static', filename='app.js')}}"></script>
   </html>
