--- a/templates/setPreferences.html
+++ b/templates/setPreferences.html
@@ -4,7 +4,8 @@
       <meta charset="utf-8">
       <!-- Latest compiled and minified bootstrap CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-      <link rel="text/css" href="table.css">
+      <link rel="text/css" href= "../static/table.css">
+      <title>Setting Preferences</title>
     </head>
     <body>
         <h1>Select which items best matches what you are looking for!</h1>
@@ -18,10 +19,10 @@
                 <th>Condition</th>
                 <th>URL</th>
             </thead>
-            
+            <form action="/notifyComplete" method="POST">
             {% for item in bestMatches %}
             <tr >
-                <th><input type="checkbox" id = "box" name = "chosen" value="matches" style="margin:auto;"></th>
+                <th><input type="checkbox" id = "box" name = "chosen" value="{{item.numItem}}"></th>
                 <th><img src="{{item.image}}" alt="No Item Image"></th>
                 <th name = "title">{{item.title}}</th>
                 <th name = "category">{{item.category}}</th>
@@ -30,17 +31,17 @@
                 <th><a href="{{item.url}}">{{item.url}}</a></th>
             </tr>
             {% endfor %}
-        </table>
-
-        <form action="/notifyComplete" method="POST">
             <div class="form-group">
                 <label for="exampleInputEmail1">Enter your Username and Email!</label>
                 <input  class="form-control" name="username" placeholder="Username"></input>
                 <input  class="form-control" name="email" placeholder="Email"></input>
                 <button type="submit" class="btn btn-primary"> Submit</button>
             </div>
+        </table>
+
+        
+ 
         </form>
 
       </body>
-      <script src="/dist/app.js" type = "text/javascript" src="{{url_for('static', filename='app.js')}}"></script>
   </html>
