--- a/static/index.css
+++ b/static/index.css
@@ -1,19 +1,34 @@
-.form{
-    width:30%;
+@font-face{
+    font-family: GraphikLight;
+    src: url("./Fonts/GraphikWeb-Light.woff") format("woff");
 }
 
+@font-face{
+    font-family: GraphikSemiBold;
+    src: url("./Fonts/GraphikWeb-Semibold.woff") format("woff");
+}
+
+@font-face{
+    font-family: GraphikBlack;
+    src: url("./Fonts/GraphikWeb-Black.woff") format("woff");
+}
 
 .searchBox{
     text-align:center;
-    margin:10%;
+    width:40%
 }
 
-#searchBox1{
-    text-align:center;
-    margin:10%;
+#options{
+    display:flex;
+    justify-content:space-evenly;
 }
 
-#searchBox2{
+#title{
+    font-size:10rem;
+    font-family: GraphikLight;
+}
+
+#logo{
     text-align:center;
     margin:10%;
 }
